--- a/Java Spring/hellohuman/pom.xml
+++ b/Java Spring/hellohuman/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.8</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.chrisB.helloworld</groupId>
-	<artifactId>helloworld</artifactId>
+	<groupId>com.chrisB.hellohuman</groupId>
+	<artifactId>hellohuman</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>helloworld</name>
-	<description>First project for Spring Boot</description>
+	<name>hellohuman</name>
+	<description>hello human assignment</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
