--- a/Java Spring/displaydate/pom.xml
+++ b/Java Spring/displaydate/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.8</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.7.9</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.chrisB.helloworld</groupId>
-	<artifactId>helloworld</artifactId>
+	<groupId>com.chrisb.displaydate</groupId>
+	<artifactId>displaydate</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>helloworld</name>
-	<description>First project for Spring Boot</description>
+	<name>displaydate</name>
+	<description>display the date</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -24,23 +23,16 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-	    <dependency>
-	        <groupId>org.apache.tomcat.embed</groupId>
-	        <artifactId>tomcat-embed-jasper</artifactId>
-		</dependency>
+    	<dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
+		<dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jstl</artifactId>
+        </dependency>
 
-    <dependency>
-        <groupId>org.webjars</groupId>
-        <artifactId>webjars-locator</artifactId>
-        <version>0.46</version>
-    </dependency>
-    
-    <!-- BOOTSTRAP DEPENDENCIES -->
-    <dependency>
-        <groupId>org.webjars</groupId>
-        <artifactId>bootstrap</artifactId>
-        <version>5.2.3</version>
-    </dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,13 +50,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-        </dependency>
 	</dependencies>
-	
 
 	<build>
 		<plugins>
