--- a/Java Spring/mvc/pom.xml
+++ b/Java Spring/mvc/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>mvc</name>
-	<description>ninja gold</description>
+	<description>mvc project</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
