update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Java OOP/Java 4 pillars example.docx
 Java OOP/~$va 4 pillars example.docx
 Spring setup.docx
 ~$VA TABLE JOIN NOTES.docx
+JAVA TABLE JOIN NOTES.docx
