--- a/Java Spring/myjavaproject/src/main/resources/application.properties
+++ b/Java Spring/myjavaproject/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.mvc.view.prefix=/WEB-INF/
-spring.datasource.url=jdbc:mysql://localhost:3306/animated_hamburger_login?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/my_java_project?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
